Bump up the perm gen when analysing the jdk.
git-svn-id: http://mutability-detector.googlecode.com/svn@672 c7a0535c-eda6-11de-83d8-6d5adf01d787